--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,56 @@
   font-family: "Lora", sans-serif;
 }
 
-.container {
+.container__header {
+  display: flex;
+  justify-content: space-between;
   width: 1140px;
   padding: 0px 15px;
   margin: auto !important;
 }
 
+.container_header p {
+  color: white;
+}
+
+.toggle {
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.app.dark > * p {
+  color: black;
+}
+.app.dark {
+  background-color: hsl(0, 0%, 100%);
+}
+.app.dark > * .country__card {
+  background-color: hsl(0, 0%, 100%);
+  color: black;
+}
+
+.app.dark > .country__info {
+  color: black;
+  /* background-color: black; */
+}
+
 body {
   background: hsl(207, 26%, 17%);
+}
+
+/* .app.dark > * header {
+  background-color: hsl(0, 0, 100%);
+} */
+
+.app.dark > .header {
+  color: black !important;
+  background-color: white;
+  box-shadow: 0 0 10px grey;
+}
+
+.app.dark > .header h5 {
+  color: black !important;
+  /* background-color: white; */
 }
 
 .header {
@@ -25,7 +67,7 @@ body {
   top: 0;
   left: 0%;
   background-color: hsl(209, 23%, 22%);
-  z-index: 11;
+  /* z-index: 11; */
 }
 
 .header h5 {
@@ -81,6 +123,15 @@ body {
   margin-top: 15px;
 }
 
+.app.dark > * input {
+  background-color: #fff;
+  color: black;
+}
+
+.app.dark > * ::placeholder {
+  color: black;
+}
+
 input {
   padding: 10px 25px;
   color: #fff;
@@ -100,6 +151,11 @@ input {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.app.dark > * select {
+  background-color: #fff;
+  color: black;
 }
 
 select {
@@ -161,4 +217,49 @@ a {
   color: #fff;
   opacity: 85%;
   font-weight: 400;
+}
+
+@media screen and (max-width: 375px) {
+  body {
+    /* background-color: lightblue; */
+  }
+
+  .container__header {
+    width: 375px;
+    /* padding-right: 10px; */
+    /* padding-left: 10px; */
+  }
+
+  .country__top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .country__bottom {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    /* width: 100%; */
+    align-items: center;
+  }
+
+  .all__country__wrapper {
+    margin-top: 70px;
+  }
+
+  .country__info__wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 800px;
+    margin-top: 70px;
+  }
+
+  .country__info__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 800px;
+  }
 }
